2011-12-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/nlrob.R (nlrob): for zero weights 'w', the residuals
	accidentally where NaN.

2011-12-12  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.8-1, released to CRAN on 2011-12-........
	* src/mc.c (mc_C_d): fixed bug in iteration; see svn log -r 272 & 274

2011-12-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/adjbox.R (adjboxStats): fix the sign-error thinko for the case mc < 0.
	* man/adjboxStats.Rd: document; test the reflection invariance now.

2011-12-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/adjbox.R (adjbox.default): new 'doReflect' argument; default
	'TRUE' ensures that 'adjbox(x)' behaves symmetrically in 'x'.

	* DESCRIPTION (Version): 0.8-0, released to CRAN on 2011-12-09

2011-10-24  Martin Maechler  <maechler@stat.math.ethz.ch>  with	Andreas in train to Fribourg

	* R/glmrob.R (residuals.glmrob): provide a version of
	residuals.glm() which works
	* NAMESPACE: residuals.glmrob

2011-10-11  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.7-8, released to CRAN on 2011-10-26, r270

	* man/lmrob.Rd: See also extended with lmrob..M..fit.

	* man/lmrob..M..fit.Rd: Extended example with function lmrob.custom.

	* R/lmrob.MM.R (lmrob.tau): moving calculation of h to the inside
	of the function, so that obj$qr is not required.

	* R/ltsPlot.R (ltsPlot, myqqplot): removed superfluous title().

2011-10-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/rfltsreg.f: add 'implicit none' and declare everything;
	new gfortran gave (correct) warnings.

	* R/nlrob.R, man/nlrob.Rd: finally fix "fitted.values"
	* tests/nlrob-tst.R (new): start more testing of nlrob()!

2011-08-09  Manuel Koller  <koller@stat.math.ethz.ch>

	* R/plot.lmrob.R (plot.lmrob): Fixing bug reported by Andreas
	Papritz. is.null(x$x) is always FALSE since there is always
	x$xlevels present.

	* inst/doc/lmrob_simulation.Rnw (f.gen): load(file) was missing the