@@ -1,6 +1,6 @@
 Package: robustbase
 Version: 0.8-1
-Date: 2011-12-23
+Date: 2012-02-22
 Title: Basic Robust Statistics
 Author: Original code by many authors, notably
 	Peter Rousseeuw and Christophe Croux, see file 'Copyrights';
@@ -20,8 +20,7 @@ Description: "Essential" Robust Statistics.  The goal is to provide
  regression methodology including model selections and multivariate
  statistics where we strive to cover the book "Robust Statistics,
  Theory and Methods" by Maronna, Martin and Yohai; Wiley 2006.
-Depends: R (>= 2.11.0), stats, graphics, methods
-Suggests: MASS, lattice, boot, MPV, xtable, ggplot2, RColorBrewer
-LazyLoad: yes
+Depends: R (>= 2.12.0), stats, graphics, methods
+Suggests: MASS, lattice, boot, cluster, MPV, xtable, ggplot2, RColorBrewer
 LazyData: yes
 License: GPL (>= 2)
