@@ -1,6 +1,6 @@
 
-R version 2.12.1 Patched (2011-01-27 r54128)
-Copyright (C) 2011 The R Foundation for Statistical Computing
+R version 2.14.1 Patched (2012-02-17 r58382)
+Copyright (C) 2012 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -18,6 +18,7 @@ Type 'q()' to quit R.
 
 > require(robustbase)
 Loading required package: robustbase
+> ## see also ./lmrob-psifns.R <<<<<<<<
 > 
 > ## Demonstrate that  one of  tukeyChi() / tukeyPsi1() is superfluous
 > 
